--- a/files/conf.ini
+++ b/files/conf.ini
@@ -1,2 +1,7 @@
 Tom=aasd3g565 John=234uh5wd 
-Donald=a33sd4fdg675
+Donald=a33sd4fdg675	Joe=we4tr34
+sometext
+
+novalue=
+=nokey
+#commentedkey=commentedvalue
