--- a/files/conf.ini
+++ b/files/conf.ini
@@ -1,7 +1,5 @@
-Tom=aasd3g565 John=234uh5wd 
-Donald=a33sd4fdg675	Joe=we4tr34
-sometext
-
-novalue=
-=nokey
-#commentedkey=commentedvalue
+Mike=0000
+Joe=we4tr34
+John=234uh5wd
+Tom=aasd3g565
+Donald=a33sd4fdg675
